--- a/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
+++ b/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
@@ -1,4 +1,16 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: {{ .Values.global.namespace }}
+  name: contrailkubemanager-svc
+  labels:
+    app: contrailkubemanager-svc
+spec:
+  clusterIP: None
+  selector:
+    app: contrailkubemanager
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
