--- a/helm/Contrail/templates/contrail-cm.yaml
+++ b/helm/Contrail/templates/contrail-cm.yaml
@@ -9,6 +9,7 @@ data:
   ANALYTICS_NODES: "{{- list .Values.global.namespace "contrailanalytics" "contrailanalytics-svc" .Values.global.nodeCount | include "nodes" }}"
   CONFIG_NODES: "{{- list .Values.global.namespace "contrailconfig" "contrailconfig-svc" .Values.global.nodeCount | include "nodes" }}"
   CONTROL_NODES: "{{- list .Values.global.namespace "contrailcontrol" "contrailcontrol-svc" .Values.global.nodeCount | include "nodes" }}"
+  KUBEMANAGER_NODES: "{{- list .Values.global.namespace "contrailkubemanager" "contrailkubemanager-svc" .Values.global.nodeCount | include "nodes" }}"
   ANALYTICSDB_CQL_PORT: "9042"
   ANALYTICSDB_NODES: "{{- list .Values.global.namespace "cassandra" "cassandra" .Values.global.nodeCount | include "nodes" }}"
   ANALYTICSDB_PORT: "9160"
@@ -20,7 +21,6 @@ data:
   IPFABRIC_SERVICE_HOST: "contrailconfig-0.contrailconfig-svc.{{ .Values.global.namespace}}.svc.cluster.local"
   RABBITMQ_NODE_PORT: "5672"
   RABBITMQ_NODES: "{{- list .Values.global.namespace "rabbitmq" "rabbitmq" .Values.global.nodeCount | include "nodes" }}"
-  #ZOOKEEPER_ANALYTICS_NODES: "zk-0.zk-svc,zk-1.zk-svc,zk-2.zk-svc"
   ZOOKEEPER_ANALYTICS_NODES: "{{- list .Values.global.namespace "zk" "zk-svc" .Values.global.nodeCount | include "nodes" }}"
   ZOOKEEPER_ANALYTICS_PORT: "2181"
   ZOOKEEPER_NODES: "{{- list .Values.global.namespace "zk" "zk-svc" .Values.global.nodeCount | include "nodes" }}"
