--- a/helm/Contrail/charts/config/templates/config.yaml
+++ b/helm/Contrail/charts/config/templates/config.yaml
@@ -40,6 +40,11 @@ spec:
       labels:
         app: contrailconfig
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/master: ''
+      tolerations:
+      - operator: Exists
+        effect: NoSchedule
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
