--- a/helm/Contrail/charts/kafka/templates/kafka.yaml
+++ b/helm/Contrail/charts/kafka/templates/kafka.yaml
@@ -27,6 +27,11 @@ spec:
       labels:
         app: kafka
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/master: ''
+      tolerations:
+      - operator: Exists
+        effect: NoSchedule
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
