--- a/helm/Contrail/charts/cassandra/templates/cassandra.yaml
+++ b/helm/Contrail/charts/cassandra/templates/cassandra.yaml
@@ -31,6 +31,11 @@ spec:
         "net.juniper.contrail.service": "cassandra"
         "net.juniper.contrail.container.name": "contrail-external-cassandra"
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/master: ''
+      tolerations:
+      - operator: Exists
+        effect: NoSchedule
       containers:
         - name: cassandra
           image: cassandra:3
