--- a/helm/Contrail/charts/zookeeper/templates/zookeeper.yaml
+++ b/helm/Contrail/charts/zookeeper/templates/zookeeper.yaml
@@ -54,6 +54,11 @@ spec:
       labels:
         app: zk
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/master: ''
+      tolerations:
+      - operator: Exists
+        effect: NoSchedule
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
