--- a/helm/Contrail/charts/analytics/templates/analytics.yaml
+++ b/helm/Contrail/charts/analytics/templates/analytics.yaml
@@ -124,6 +124,8 @@ spec:
           value: "analytics"
         - name: DOCKER_HOST
           value: "unix://mnt/docker.sock"
+        - name: PROVISION_RETRIES
+          value: "100"
         volumeMounts:
         - mountPath: /mnt
           name: docker-unix-socket
