--- a/helm/Contrail/charts/cassandra/templates/cassandra.yaml
+++ b/helm/Contrail/charts/cassandra/templates/cassandra.yaml
@@ -1,75 +1,69 @@
 ---
 apiVersion: v1
-kind: Service
+kind: ConfigMap
 metadata:
+  name: contrail-configdb-config
+  namespace: {{ .Values.global.namespace }}
+data:
+  CASSANDRA_CLUSTER_NAME: ContrailConfigDB
+  CASSANDRA_START_RPC: "true"
+  CASSANDRA_LISTEN_ADDRESS: auto
+  CASSANDRA_PORT: "9160"
+  CASSANDRA_CQL_PORT: "9042"
+  CASSANDRA_SSL_STORAGE_PORT: "7001"
+  CASSANDRA_STORAGE_PORT: "7000"
+  CASSANDRA_JMX_LOCAL_PORT: "7199"
+---
+apiVersion: extensions/v1beta1
+kind: DaemonSet
+metadata:
+  name: contrail-configdb
   namespace: {{ .Values.global.namespace }}
   labels:
-    app: cassandra
-  name: cassandra
+    app: contrail-configdb
 spec:
-  clusterIP: None
-  ports:
-    - port: 9042
-      name: cql-svc
-    - port: 9160
-      name: rpc-svc
-  selector:
-    app: cassandra
----
-apiVersion: "apps/v1beta1"
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: cassandra
-spec:
-  serviceName: cassandra
-  replicas: 3
   template:
     metadata:
       labels:
-        app: cassandra
-        "net.juniper.contrail.service": "cassandra"
-        "net.juniper.contrail.container.name": "contrail-external-cassandra"
+        app: contrail-configdb
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+        - name: init-myservice
+          image: docker.io/michaelhenkel/contrail-init:latest
+          command: ["/app"]
       containers:
-        - name: cassandra
-          image: cassandra:3
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 7000
-              name: intra-node
-            - containerPort: 7001
-              name: tls-intra-node
-            - containerPort: 7199
-              name: jmx
-            - containerPort: 9042
-              name: cql
-            - containerPort: 9160
-              name: rpc
-          envFrom:
-            - configMapRef:
-                name: contrail-cm
-          env:
-            - name: MAX_HEAP_SIZE
-              value: 2048M
-            - name: HEAP_NEWSIZE
-              value: 100M
-            - name: CASSANDRA_CLUSTER_NAME
-              value: "Cassandra"
-            - name: CASSANDRA_DC
-              value: "DC1"
-            - name: CASSANDRA_RACK
-              value: "Rack1"
-            - name: CASSANDRA_START_RPC
-              value: "true"
-            - name: CASSANDRA_ENDPOINT_SNITCH
-              value: GossipingPropertyFileSnitch
+      - name: contrail-configdb
+        image: "{{ .Values.global.containerRegistry }}/contrail-external-cassandra:{{ .Values.global.containerTag }}"
+        imagePullPolicy: ""
+        env:
+        - name: NODE_TYPE
+          value: config-database
+        - name: CASSANDRA_SEEDS
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        envFrom:
+        - configMapRef:
+            name: contrail-configdb-config
+        volumeMounts:
+        - mountPath: /var/lib/cassandra
+          name: configdb-data
+        - mountPath: /var/log/cassandra
+          name: configdb-logs
       volumes:
-      - name: docker-unix-socket
+      - name: configdb-data
         hostPath:
-          path: /var/run
+          path: /var/lib/contrail/configdb
+      - name: configdb-logs
+        hostPath:
+          path: /var/log/contrail/configdb
