--- a/helm/Contrail/charts/config/templates/config.yaml
+++ b/helm/Contrail/charts/config/templates/config.yaml
@@ -74,6 +74,8 @@ spec:
           value: "config"
         - name: DOCKER_HOST
           value: "unix://mnt/docker.sock"
+        - name: PROVISION_RETRIES
+          value: "100"
         volumeMounts:
         - mountPath: /mnt
           name: docker-unix-socket
