--- a/helm/Contrail/charts/zookeeper/templates/zookeeper.yaml
+++ b/helm/Contrail/charts/zookeeper/templates/zookeeper.yaml
@@ -1,149 +1,55 @@
 ---
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
+  name: config-zookeeper
   namespace: {{ .Values.global.namespace }}
-  name: zk-svc
   labels:
-    app: zk-svc
+    app: config-zookeeper
 spec:
-  ports:
-  - port: 2888
-    name: server
-  - port: 3888
-    name: leader-election
-  clusterIP: None
-  selector:
-    app: zk
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: zk-cm
-data:
-  jvm.heap: "1G"
-  tick: "2000"
-  init: "10"
-  sync: "5"
-  client.cnxns: "60"
-  snap.retain: "3"
-  purge.interval: "0"
----
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: zk-pdb
-spec:
-  selector:
-    matchLabels:
-      app: zk
-  minAvailable: 2
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: zk
-spec:
-  serviceName: zk-svc
-  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
-        app: zk
+        app: config-zookeeper
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values: 
-                    - zk
-              topologyKey: "kubernetes.io/hostname"
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+        - name: init-myservice
+          image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+          command: ["/app"]
       containers:
-      - name: k8szk
-        imagePullPolicy: Always
-        image: gcr.io/google_samples/k8szk:v3
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        ports:
-        - containerPort: 2181
-          name: client
-        - containerPort: 2888
-          name: server
-        - containerPort: 3888
-          name: leader-election
+      - name: config-zookeeper
+        image: "{{ .Values.global.containerRegistry }}/contrail-external-zookeeper:{{ .Values.global.containerTag }}"
+        imagePullPolicy: ""
         env:
-        - name : ZK_REPLICAS
-          value: "{{ .Values.global.nodeCount }}"
-        - name : ZK_HEAP_SIZE
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: jvm.heap
-        - name : ZK_TICK_TIME
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: tick
-        - name : ZK_INIT_LIMIT
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: init
-        - name : ZK_SYNC_LIMIT
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: tick
-        - name : ZK_MAX_CLIENT_CNXNS
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: client.cnxns
-        - name: ZK_SNAP_RETAIN_COUNT
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: snap.retain
-        - name: ZK_PURGE_INTERVAL
-          valueFrom:
-            configMapKeyRef:
-                name: zk-cm
-                key: purge.interval
-        - name: ZK_CLIENT_PORT
+        - name: ZOOKEEPER_PORT
           value: "2181"
-        - name: ZK_SERVER_PORT
-          value: "2888"
-        - name: ZK_ELECTION_PORT
-          value: "3888"
-        command:
-        - sh
-        - -c
-        - zkGenConfig.sh && zkServer.sh start-foreground
-        readinessProbe:
-          exec:
-            command:
-            - "zkOk.sh"
-          initialDelaySeconds: 10
-          timeoutSeconds: 5
-        livenessProbe:
-          exec:
-            command:
-            - "zkOk.sh"
-          initialDelaySeconds: 10
-          timeoutSeconds: 5
-      securityContext:
-        runAsUser: 1000
-        fsGroup: 1000
+        - name: ZOOKEEPER_PORTS
+          value: "2888:3888"
+        - name: NODE_TYPE
+          value: config-database
+        - name: ZOOKEEPER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        volumeMounts:
+        - mountPath: /var/lib/zookeeper
+          name: zookeeper-data
+        - mountPath: /var/log/zookeeper
+          name: zookeeper-logs
+      volumes:
+      - name: zookeeper-data
+        hostPath:
+          path: /var/lib/contrail/config-zookeeper
+      - name: zookeeper-logs
+        hostPath:
+          path: /var/log/contrail/config-zookeeper
