--- a/helm/Contrail/charts/rabbitmq/templates/rabbitmq.yaml
+++ b/helm/Contrail/charts/rabbitmq/templates/rabbitmq.yaml
@@ -1,86 +1,20 @@
 ---
 apiVersion: v1
-kind: ServiceAccount
+kind: ConfigMap
 metadata:
+  name: rabbitmq-config
   namespace: {{ .Values.global.namespace }}
-  name: rabbitmq
+data:
+  RABBITMQ_ERLANG_COOKIE: "47EFF3BB-4786-46E0-A5BB-58455B3C2CB4"
 ---
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: endpoint-reader
-rules:
-- apiGroups: [""]
-  resources: ["endpoints"]
-  verbs: ["get"]
----
-kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: endpoint-reader
-subjects:
-- kind: ServiceAccount
   name: rabbitmq
   namespace: {{ .Values.global.namespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: endpoint-reader
----
-kind: Service
-apiVersion: v1
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: rabbitmq
   labels:
     app: rabbitmq
 spec:
-  ports:
-   - name: http
-     port: 15672
-   - name: amqp
-     port: 5672
-  clusterIP: None
-  selector:
-    app: rabbitmq
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: rabbitmq-config
-data:
-  enabled_plugins: |
-      [rabbitmq_management,rabbitmq_peer_discovery_k8s].
-
-  rabbitmq.conf: |
-      ## Clustering
-      cluster_formation.peer_discovery_backend  = rabbit_peer_discovery_k8s
-      cluster_formation.k8s.host = kubernetes.default.svc.cluster.local
-      cluster_formation.k8s.address_type = ip
-      cluster_formation.node_cleanup.interval = 10
-      # Set to false if automatic removal of unknown/absent nodes
-      # is desired. This can be dangerous, see
-      #  * http://www.rabbitmq.com/cluster-formation.html#node-health-checks-and-cleanup
-      #  * https://groups.google.com/forum/#!msg/rabbitmq-users/wuOfzEywHXo/k8z_HWIkBgAJ
-      cluster_formation.node_cleanup.only_log_warning = true
-      cluster_partition_handling = autoheal
-      ## queue master locator 
-      queue_master_locator=min-masters
-      ## See http://www.rabbitmq.com/access-control.html#loopback-users
-      loopback_users.guest = false
-   
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: rabbitmq
-spec:
-  serviceName: rabbitmq
-  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
@@ -91,51 +25,40 @@ spec:
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      serviceAccountName: rabbitmq
-      terminationGracePeriodSeconds: 10
-      containers:        
-      - name: rabbitmq-k8s
-        image: rabbitmq:3.7
-        volumeMounts:
-          - name: config-volume
-            mountPath: /etc/rabbitmq
-        ports:
-          - name: http
-            protocol: TCP
-            containerPort: 15672
-          - name: amqp
-            protocol: TCP
-            containerPort: 5672
-        livenessProbe:
-          exec:
-            command: ["rabbitmqctl", "status"]
-          initialDelaySeconds: 30
-          timeoutSeconds: 10
-        readinessProbe:
-          exec:
-            command: ["rabbitmqctl", "status"]
-          initialDelaySeconds: 10
-          timeoutSeconds: 10
-        imagePullPolicy: Always
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+        - name: init-myservice
+          image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+          command: ["/app"]
+      containers:
+      - name: rabbitmq
+        image: "{{ .Values.global.containerRegistry }}/contrail-external-rabbitmq:{{ .Values.global.containerTag }}"
+        imagePullPolicy: ""
         env:
-          - name: MY_POD_IP
-            valueFrom:
-              fieldRef:
-                fieldPath: status.podIP
-          - name: RABBITMQ_USE_LONGNAME
-            value: "true"
-          - name: RABBITMQ_NODENAME
-            value: "rabbit@$(MY_POD_IP)"
-          - name: K8S_SERVICE_NAME
-            value: "rabbitmq"
-          - name: RABBITMQ_ERLANG_COOKIE
-            value: "mycookie" 
-      volumes:
-        - name: config-volume
-          configMap:
+        - name: NODE_TYPE
+          value: config-database
+        - name: RABBITMQ_NODE_PORT
+          value: "5673"
+        - name: RABBITMQ_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        envFrom:
+        - configMapRef:
             name: rabbitmq-config
-            items:
-            - key: rabbitmq.conf
-              path: rabbitmq.conf
-            - key: enabled_plugins
-              path: enabled_plugins
+        volumeMounts:
+        - mountPath: /var/lib/rabbitmq
+          name: rabbitmq-data
+        - mountPath: /var/log/rabbitmq
+          name: rabbitmq-logs
+      volumes:
+      - name: rabbitmq-data
+        hostPath:
+          path: /var/lib/contrail/rabbitmq
+      - name: rabbitmq-logs
+        hostPath:
+          path: /var/log/contrail/rabbitmq
