--- a/helm/Contrail/charts/config/templates/config.yaml
+++ b/helm/Contrail/charts/config/templates/config.yaml
@@ -1,132 +1,127 @@
 ---
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
+  name: contrail-controller-config
   namespace: {{ .Values.global.namespace }}
-  name: contrailconfig-svc
   labels:
-    app: contrailconfig-svc
+    app: contrail-controller-config
 spec:
-  ports:
-  - port: 8082
-    targetPort: 8082
-    protocol: TCP
-    name: api
-  clusterIP: None
-  selector:
-    app: contrailconfig
----
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailconfig-pdb
-spec:
-  selector:
-    matchLabels:
-      app: contrailconfig
-  minAvailable: 2
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailconfig
-spec:
-  serviceName: contrailconfig-svc
-  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
-        app: contrailconfig
+        app: contrail-controller-config
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values: 
-                    - contrailconfig
-              topologyKey: "kubernetes.io/hostname"
-      imagePullSecrets:
-      - name: contrail-nightly
-      containers:
-      - name: nodemgr
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-nodemgr:{{ .Values.global.containerTag }}
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "500m"
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+      - name: init-myservice
+        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+        command: ["/app"]
+      - name: contrail-node-init
         envFrom:
         - configMapRef:
-            name: contrail-cm
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        image: "{{ .Values.global.containerRegistry }}/contrail-node-init:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        securityContext:
+          privileged: true
+        env:
+        - name: CONTRAIL_STATUS_IMAGE
+          value: "{{ .Values.global.containerRegistry }}/contrail-status:{{ .Values.global.containerTag }}"
+        volumeMounts:
+        - mountPath: /host/usr/bin
+          name: host-usr-bin
+      containers:
+      - name: contrail-controller-config-api
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-config-api:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: config-logs
+      - name: contrail-controller-config-devicemgr
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-config-devicemgr:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: config-logs
+      - name: contrail-controller-config-schema
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-config-schema:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: config-logs
+      - name: contrail-controller-config-svcmonitor
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-config-svcmonitor:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: config-logs
+      - name: contrail-controller-config-nodemgr
+        image: "{{ .Values.global.containerRegistry }}/contrail-nodemgr:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
         env:
         - name: NODE_TYPE
-          value: "config"
+          value: config
         - name: DOCKER_HOST
           value: "unix://mnt/docker.sock"
-        - name: PROVISION_RETRIES
-          value: "100"
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
         volumeMounts:
+        - mountPath: /var/log/contrail
+          name: config-logs
         - mountPath: /mnt
           name: docker-unix-socket
-      - name: api
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-config-api:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        ports:
-        - containerPort: 8082
-          name: client
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-      - name: svcmonitor
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-config-svcmonitor:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "500m"
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-      - name: schema
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-config-schema:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "500m"
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-      - name: devicemgr
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-config-devicemgr:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "500m"
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
       volumes:
+      - name: config-logs
+        hostPath:
+          path: /var/log/contrail/config
       - name: docker-unix-socket
         hostPath:
           path: /var/run
