--- a/helm/Contrail/charts/control/templates/control.yaml
+++ b/helm/Contrail/charts/control/templates/control.yaml
@@ -1,124 +1,126 @@
 ---
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
+  name: contrail-controller-control
   namespace: {{ .Values.global.namespace }}
-  name: contrailcontrol-svc
   labels:
-    app: contrailcontrol-svc
+    app: contrail-controller-control
 spec:
-  ports:
-  - port: 5269
-    targetPort: 5269
-    protocol: TCP
-    name: xmpp
-  - port: 179
-    targetPort: 179
-    protocol: TCP
-    name: bgp
-  clusterIP: None
-  selector:
-    app: contrailcontrol
----
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailcontrol-pdb
-spec:
-  selector:
-    matchLabels:
-      app: contrailcontrol
-  minAvailable: 2
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailcontrol
-spec:
-  serviceName: contrailcontrol-svc
-  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
-        app: contrailcontrol
+        app: contrail-controller-control
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values: 
-                    - contrailcontrol
-              topologyKey: "kubernetes.io/hostname"
-      hostPID: true
+      - operator: Exists
+        effect: NoExecute
       hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-      #privileged: true
-      containers:
-      - name: nodemgr
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-nodemgr:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "250m"
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-        env:
-        - name: NODE_TYPE
-          value: "control"
-        - name: DOCKER_HOST
-          value: "unix://mnt/docker.sock"
-        - name: PROVISION_RETRIES
-          value: "100"
-        volumeMounts:
-        - mountPath: /mnt
-          name: docker-unix-socket
-      - name: control
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-control-control:{{ .Values.global.containerTag }}
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        ports:
-        - containerPort: 8081
-          name: client
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-      - name: named
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-control-named:{{ .Values.global.containerTag }}
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
-        volumeMounts:
-        - name: contrail-dns
-          mountPath: /etc/contrail/dns
+      serviceAccountName: contrail-service-account
+      initContainers:
+      - name: init-myservice
+        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+        command: ["/app"]
+      - name: contrail-node-init
+        image: "{{ .Values.global.containerRegistry }}/contrail-node-init:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
         securityContext:
           privileged: true
-      - name: dns
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-control-dns:{{ .Values.global.containerTag }}
+        env:
+        - name: CONTRAIL_STATUS_IMAGE
+          value: "{{ .Values.global.containerRegistry }}/contrail-status:{{ .Values.global.containerTag }}"
         envFrom:
         - configMapRef:
-            name: contrail-cm
+            name: contrail-config-map
         volumeMounts:
-        - name: contrail-dns
-          mountPath: /etc/contrail/dns
+        - mountPath: /host/usr/bin
+          name: host-usr-bin
+      containers:
+      - name: contrail-controller-control
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-control-control:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: control-logs
+      - name: contrail-controller-control-dns
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-control-dns:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        volumeMounts:
+        - mountPath: /etc/contrail
+          name: dns-config
+        - mountPath: /var/log/contrail
+          name: control-logs
+      - name: contrail-controller-control-named
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-control-named:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - mountPath: /etc/contrail
+          name: dns-config
+        - mountPath: /var/log/contrail
+          name: control-logs
+      - name: contrail-controller-nodemgr
+        image: "{{ .Values.global.containerRegistry }}/contrail-nodemgr:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        - name: NODE_TYPE
+          value: control
+        - name: DOCKER_HOST
+          value: "unix://mnt/docker.sock"
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: control-logs
+        - mountPath: /mnt
+          name: docker-unix-socket
       volumes:
-      - name: contrail-dns
-        emptyDir: {}
+      - name: control-logs
+        hostPath:
+          path: /var/log/contrail/control
       - name: docker-unix-socket
         hostPath:
           path: /var/run
+      - name: dns-config
+        emptyDir: {}
+      - name: host-usr-bin
+        hostPath:
+          path: /usr/bin
