--- a/helm/Contrail/charts/webui/templates/webui.yaml
+++ b/helm/Contrail/charts/webui/templates/webui.yaml
@@ -1,91 +1,76 @@
 ---
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
+  name: contrail-controller-webui
   namespace: {{ .Values.global.namespace }}
-  name: contrailwebui-svc
   labels:
-    app: contrailwebui-svc
+    app: contrail-controller-webui
 spec:
-  ports:
-  - port: 8143
-    targetPort: 8143
-    protocol: TCP
-    name: webui
-  type: LoadBalancer
-  selector:
-    app: contrailwebui
----
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailwebui-pdb
-spec:
-  selector:
-    matchLabels:
-      app: contrailwebui
-  minAvailable: 2
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: contrailwebui
-spec:
-  serviceName: contrailwebui-svc
-  replicas: 1
   template:
     metadata:
       labels:
-        app: contrailwebui
+        app: contrail-controller-webui
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values: 
-                    - contrailwebui
-              topologyKey: "kubernetes.io/hostname"
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+      - name: init-myservice
+        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+        command: ["/app"]
+      - name: contrail-node-init
+        image: "{{ .Values.global.containerRegistry }}/contrail-node-init:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        securityContext:
+          privileged: true
+        env:
+        - name: CONTRAIL_STATUS_IMAGE
+          value: "{{ .Values.global.containerRegistry }}/contrail-status:{{ .Values.global.containerTag }}"
+        volumeMounts:
+        - mountPath: /host/usr/bin
+          name: host-usr-bin
       containers:
-      - name: redis
-        imagePullPolicy: Always
-        image: docker.io/redis:4.0.2
-        ports:
-        - containerPort: 6379
-          name: client
-        resources:
-          requests:
-            memory: "1Gi"
-            cpu: "250m"
-      - name: web
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-webui-web:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        ports:
-        - containerPort: 8143
-          name: client
+      - name: contrail-controller-webui-job
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-webui-job:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
         envFrom:
         - configMapRef:
-            name: contrail-cm
-      - name: job
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-controller-webui-job:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: webui-logs
+      - name: contrail-controller-webui-web
+        image: "{{ .Values.global.containerRegistry }}/contrail-controller-webui-web:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
         envFrom:
         - configMapRef:
-            name: contrail-cm
+            name: contrail-config-map
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: webui-logs
+      volumes:
+      - name: webui-logs
+        hostPath:
+          path: /var/log/contrail/webui
+      - name: host-usr-bin
+        hostPath:
+          path: /usr/bin
