--- a/helm/Contrail/templates/contrail-config-map.yaml
+++ b/helm/Contrail/templates/contrail-config-map.yaml
@@ -14,3 +14,6 @@ data:
   ANALYTICSDB_PORT: "9160"
   ANALYTICSDB_CQL_PORT: "9042"
   ZOOKEEPER_ANALYTICS_PORT: "2181"
+  CLOUD_ORCHESTRATOR: "kubernetes"
+  CONTRAIL_CONTAINER_REGISTRY: docker.io/michaelhenkel
+  CONTRAIL_CONTAINER_TAG: 5.1-dev4
