--- a/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
+++ b/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
@@ -1,100 +1,101 @@
 ---
 apiVersion: v1
-kind: Service
+kind: Secret
 metadata:
+  name: contrail-kube-manager-token
   namespace: {{ .Values.global.namespace }}
-  name: contrailkubemanager-svc
-  labels:
-    app: contrailkubemanager-svc
-spec:
-  clusterIP: None
-  selector:
-    app: contrailkubemanager
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: contrail-kubemanager
-  namespace: {{ .Values.global.namespace }}
-rules:
-  - apiGroups: ["*"]
-    resources: ["*"]
-    verbs: ["*"]
+  annotations:
+    kubernetes.io/service-account.name: contrail-service-account
+type: kubernetes.io/service-account-token
 ---
 apiVersion: v1
-kind: ServiceAccount
+kind: ConfigMap
 metadata:
-  name: contrail-kubemanager
+  name: kube-manager-config
   namespace: {{ .Values.global.namespace }}
+data:
+  K8S_TOKEN_FILE: "/tmp/serviceaccount/token"
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
+apiVersion: extensions/v1beta1
+kind: DaemonSet
 metadata:
-  name: contrail-kubemanager
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: contrail-kubemanager
-subjects:
-- kind: ServiceAccount
-  name: contrail-kubemanager
+  name: contrail-kube-manager
   namespace: {{ .Values.global.namespace }}
----
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: kubemanager-pdb
+  labels:
+    app: contrail-kube-manager
 spec:
-  selector:
-    matchLabels:
-      app: kubemanager
-  minAvailable: 2
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  namespace: {{ .Values.global.namespace }}
-  name: kubemanager
-spec:
-  serviceName: kubemanager-svc
-  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
-        app: kubemanager
+        app: contrail-kube-manager
     spec:
-      serviceAccountName: contrail-kubemanager
       nodeSelector:
         node-role.kubernetes.io/master: ''
       tolerations:
       - operator: Exists
         effect: NoSchedule
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values: 
-                    - kubemanager
-              topologyKey: "kubernetes.io/hostname"
-      imagePullSecrets:
-      - name: contrail-nightly
+      - operator: Exists
+        effect: NoExecute
+      hostNetwork: true
+      serviceAccountName: contrail-service-account
+      initContainers:
+      - name: init-myservice
+        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
+        command: ["/app"]
+        imagePullPolicy: "Always"
+      - name: contrail-node-init
+        image: "{{ .Values.global.containerRegistry }}/contrail-node-init:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        securityContext:
+          privileged: true
+        env:
+        - name: CONTRAIL_STATUS_IMAGE
+          value: "{{ .Values.global.containerRegistry }}/contrail-status:{{ .Values.global.containerTag }}"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        volumeMounts:
+        - mountPath: /host/usr/bin
+          name: host-usr-bin
+      containers:
+      - name: kube-manager
+        image: "{{ .Values.global.containerRegistry }}/contrail-kubernetes-kube-manager:{{ .Values.global.containerTag }}"
+        imagePullPolicy: "Always"
+        envFrom:
+        - configMapRef:
+            name: contrail-config-map
+        - configMapRef:
+            name: kube-manager-config
+        env:
+        - name: LOG_LEVEL
+          value: "SYS_DEBUG"
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
+        - name: KUBERNETES_API_SERVER
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: KUBERNETES_API_SERVER
+        - name: KUBERNETES_API_SECURE_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: KUBERNETES_API_SECURE_PORT
+        volumeMounts:
+        - mountPath: /var/log/contrail
+          name: kube-manager-logs
+        - mountPath: /tmp/serviceaccount
+          name: pod-secret
       volumes:
       - name: pod-secret
         secret:
-          secretName: contrail-kubemanager-token
-      containers:
-      - name: kubemgr
-        #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-        imagePullPolicy: Always
-        image: {{ .Values.global.containerRegistry }}/contrail-kubernetes-kube-manager:{{ .Values.global.containerTag }}
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        envFrom:
-        - configMapRef:
-            name: contrail-cm
+          secretName: contrail-kube-manager-token
+      - name: kube-manager-logs
+        hostPath:
+          path: /var/log/contrail/kube-manager
+      - name: host-usr-bin
+        hostPath:
+          path: /usr/bin
