--- a/helm/Contrail/charts/redis/templates/redis.yaml
+++ b/helm/Contrail/charts/redis/templates/redis.yaml
@@ -25,6 +25,7 @@ spec:
       - name: init-myservice
         image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
         command: ["/app"]
+        imagePullPolicy: "Always"
       containers:
       - name: redis
         image: "{{ .Values.global.containerRegistry }}/contrail-external-redis:{{ .Values.global.containerTag }}"
